fixing buttons on ios. or trying to.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -60,8 +60,8 @@ a {
   background-color: #467b8d
 }
 
-button:submit {
-  
+input[type="submit"]{
+  -webkit-appearance: none;
 }
 
 /*LOG IN - SIGNUP SCREEN*/
